--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MVVMTemplateApp</string>
+    <string name="app_name">MyApoteker</string>
     <string name="retry">Retry</string>
     <string name="no_internet">No internet connection</string>
     <string name="fetch_failed">Failed Fetching API</string>
@@ -12,4 +12,8 @@
     <string name="movie_desc">%1$d - %2$s\n</string>
     <string name="todo">TODO</string>
     <string name="no_data_showing">No data showing…</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="sign_in">Sign In</string>
+    <string name="forgot_pass">Lupa Password? Butuh bantuan.</string>
 </resources>
