--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="no_data_showing">No data showing…</string>
     <string name="save_pref">Save Preference</string>
     <string name="do_save_pref">Do you want to save to preference?</string>
+    <string name="copy_clip">%1$s copied to clipboard</string>
+    <string name="copy_clip_success">Copied to clipboard</string>
 </resources>
