:hammer: refactor ui for clean view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="copy_clip">%1$s copied to clipboard</string>
     <string name="copy_clip_success">Copied to clipboard</string>
     <string name="show_movie_paging">Show Movie Paging</string>
+    <string name="show_sample_movie">Show Movie Remote, Local</string>
 </resources>
